syntax = "proto3";

package goods;

option go_package = "goods";

import "goods/common.proto";

message GetCategoryListReq {

}

message GetCategoryListRsp {
    int32 code = 1;
    string msg = 2;
    string log_id = 3;
    GetCategoryListRspData data = 4;

    message GetCategoryListRspData {
        repeated BaseCategory category_list = 1;
    }

}