syntax = "proto3";

package goods;

option go_package = "goods";

import "goods/common.proto";



//根据id获取商品列表
message GetGoodsListReq {
    repeated uint64 spu_ids = 1;
}

message GetGoodsListRsp {
    int32 code = 1;
    string msg = 2;
    string log_id = 3;
    GetGoodsListRspData data = 4;
    message GetGoodsListRspData {
        repeated SpuInfo spu_list = 1;
    }
}

// 商品详情页
message GetGoodsDetailReq{
    uint64 spu_id = 1;
}

message GetGoodsDetailRsp{
    int32 code = 1;
    string msg = 2;
    string log_id = 3;
    GetGoodsDetailRspData data = 4;
    message GetGoodsDetailRspData {
        SpuInfo spu_info = 1;
    }
}   



// 发布商品
message PublishGoodsReq{
    uint64 category_id = 1;
    string category_name = 2;
    uint64 brand_id = 3;
    string brand_name = 4;
    string spu_name = 5;
    string spu_desc = 6;
    string spu_price = 7;
    string spu_img_url = 8;

    // 规格
    repeated PublishSkuInfo sku_info_list = 9;
    // 属性
    repeated AttributeInfo attribute_info_list = 10;

    message PublishSkuInfo {
    uint64 stock_num = 1;
    string sku_price = 2;
    repeated SpecKeyValue spec_key_value = 3;
    }
}



message PublishGoodsRsp {
    int32 code = 1;
    string msg = 2;
    string log_id = 3;
    PublishGoodsRspData data = 4;
    message PublishGoodsRspData {
        uint64 spu_id = 1;
    }
}